hphp/hack/test/typecheck/const_true_false_null.php
<?hh

const int TRUE = 1;
const int true = 1;
const int FALSE = 1;
const int false = 1;
const int NULL = 1;
const int null = 1;
